force-app/main/default/objects/Lion__c/Lion__c.object-meta.xml
<CustomObject>
    <label>Lion</label>
    <nameField>
        <label>Lion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>