force-app/main/default/objects/Lion__c/fields/Lion_Number__c.field-meta.xml
<CustomField>
    <fullName>Lion_Number__c</fullName>
    <displayFormat>AUTO-{0000}</displayFormat>
    <label>Lion Number</label>
    <type>AutoNumber</type>
</CustomField>