force-app/main/default/objects/Lion__c/fields/Zoo__c.field-meta.xml
<CustomField>
    <fullName>Zoo__c</fullName>
    <label>Zoo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>